<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_game_stage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            tools:text="game baseStage..." />

        <TextView
            android:id="@+id/text_view_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="normal|bold|italic"
            tools:text="message... well a message can be pretty long and span two lines" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/layout_top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            tools:text="PLAYER" />

        <GridView
            android:id="@+id/gridViewBoard1"
            style="@style/StyleGridViewBoard"></GridView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            tools:text="CPU" />

        <GridView
            android:id="@+id/gridViewBoard2"
            style="@style/StyleGridViewBoard"></GridView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/layout_top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ACTION"
                android:textAlignment="center"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSky"
                android:text="ATTACK" />

            <Button
                android:id="@+id/button_initialize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSky"
                android:text="RESTART" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="normal|bold|italic"
                tools:text="CELL DESIGN" />

            <Button
                style="@style/StyleButtonColor"
                android:background="@color/EmptyColor"
                android:text="@string/cell_status_empty" />

            <Button
                style="@style/StyleButtonColor"
                android:background="@color/FullColor"
                android:text="@string/cell_status_full" />

            <Button
                style="@style/StyleButtonColor"
                android:background="@color/UnknownColorColor"
                android:text="@string/cell_status_unknown" />

            <Button
                style="@style/StyleButtonColor"
                android:background="@color/HitColor"
                android:text="@string/cell_status_hit" />

            <Button
                style="@style/StyleButtonColor"
                android:background="@color/MissColor"
                android:text="@string/cell_status_miss" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
